# netwatch

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dockerfile  sonar-test.yml  trivy-test.yml
netwatch/: api.py  checks.py  config.py
netwatch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: bootstrap.sh
tests/: test_api.py  test_checks.py
